# arceos-umhv

./: .axconfig.toml  .gitignore  .gitmodules  CI.md  Cargo.toml  Makefile  README.md  README_CN.md  build.rs  rk3588.dts
.github/workflows/: REMOTE-CI.md  build.yml  test.yml
.github/workflows/actions/setup-nimbos-guest-image/: action.yml
.github/workflows/actions/setup-qemu/: action.yml
arceos-vmm/: .gitignore  Cargo.toml  Makefile  build.rs  dump.dts  dump0.dts  guest.S  mk.sh  output  qemu.sh  run.sh
arceos-vmm/configs/: arceos-aarch64-smp.toml  arceos-aarch64.toml  arceos-riscv64-smp.toml  arceos-riscv64.toml  arceos-x86_64-sleep.toml  arceos-x86_64.toml  arceos.toml  bsta1000b-fada-arceos.its  linux-a1000-aarch64-smp8.toml  linux-aarch64.toml  linux-qemu-aarch64-smp2.toml  linux-qemu-aarch64.toml  linux-qemu-smp2.dts  linux-qemu.dts  linux-rk3588-aarch64.toml  linux.toml  nimbos-aarch64.toml  nimbos-riscv64.toml  nimbos-riscv64_2.toml  nimbos-x86_64.toml  nimbos.toml  rk3588-aarch64.toml  starry-x86_64.toml
arceos-vmm/configs/vms/: arceos-aarch64.toml  arceos-riscv64-smp.toml  linux-a1000-aarch64-smp8.toml  linux-qemu-aarch64-smp2.toml  linux-qemu-aarch64-vm2.toml  linux-qemu-aarch64.toml  linux-qemu-uart2.dts  linux-qemu.dts  nimbos-aarch64.toml  nimbos-aarch64_0.toml  nimbos-aarch64_1.toml  nimbos-riscv64.toml  starry-x86_64.toml
arceos-vmm/scripts/lds/: linker_aarch64-bsta1000b-hv.lds  linker_aarch64-qemu-virt-hv.lds  linker_aarch64-qemu-virt.lds  linker_aarch64-rk3588j.lds  linker_riscv64-qemu-virt.lds  linker_x86_64-qemu-q35.lds
arceos-vmm/scripts/make/: bsta1000b-fada.mk  build.mk  cargo.mk  config.mk  platform.mk  qemu.mk  rk3588.mk
arceos-vmm/src/: dtb_aarch64.rs  gconfig.rs  gpm.rs  hal.rs  images.rs  main.rs  main_bak.rs  task.rs  vmexit.rs  vmm.rs
arceos-vmm/src/config/: mod.rs  x86_64.rs
arceos-vmm/src/device_emu/: i8259_pic.rs  lapic.rs  mod.rs  uart16550.rs
arceos-vmm/src/gpm/: mod.rs
arceos-vmm/src/gpm/arch/: mod.rs  x86_64.rs
arceos-vmm/src/gpm/arch/aarch64/: dtb_aarch64.rs  mod.rs
arceos-vmm/src/gpm/arch/riscv64/: dtb_riscv64.rs  mod.rs
arceos-vmm/src/gpm/arch/x86_64/: mod.rs
arceos-vmm/src/vm_exit/arch/x86_64/: mod.rs  vmexit.rs
arceos-vmm/src/vmm/: config.rs  images.rs  ipi.rs  mock.rs  mod.rs  timer.rs  timers.rs  timers2.rs  vcpus.rs  vm_list.rs
arceos-vmm/tools/rk3588/: .tmp_its  mkimg
configs/vms/: arceos-aarch64-smp.toml  arceos-aarch64.toml  arceos-riscv64.toml  linux-a1000-aarch64-smp8.toml  linux-qemu-aarch64-smp2.toml  linux-qemu-aarch64-vm2.toml  linux-qemu-aarch64.toml  linux-rk3588-aarch64.toml  nimbos-aarch64.toml  nimbos-riscv64.toml  nimbos-x86_64.toml  starry-aarch64.toml  starry-riscv64.toml  starry-x86_64.toml
crates/axaddrspace/: Cargo.toml
crates/axaddrspace/src/: address_space.rs  lib.rs
crates/axaddrspace/src/backend/: alloc.rs  linear.rs  mod.rs
crates/axaddrspace/src/npt/: mod.rs
crates/axaddrspace/src/npt/arch/: aarch64.rs  mod.rs  x86_64.rs
crates/axvcpu/: Cargo.toml
crates/axvcpu/src/: arch_vcpu.rs  exit.rs  lib.rs  vcpu.rs
crates/axvm/: Cargo.toml
crates/axvm/src/: config.rs  hal.rs  lib.rs  percpu.rs  vcpu.rs  vm.rs
crates/axvm/src/arch/: mod.rs
crates/axvm/src/arch/aarch64/: context_frame.rs  device_list.rs  entry.S  ept.rs  exception_utils.rs  hvc.rs  mod.rs  pcpu.rs  sync.rs  vcpu.rs
crates/axvm/src/arch/riscv64/: consts.rs  csrs.rs  device_list.rs  guest.S  irq.rs  mem_extable.S  mod.rs  percpu.rs  regs.rs  timers.rs  trap.S  trap.rs  trap2.S  vcpu.rs  vm_pages.rs  vmexit.rs
crates/axvm/src/arch/riscv64/devices/: emu_plic.rs  mod.rs  plic.rs
crates/axvm/src/arch/riscv64/sbi/: base.rs  dbcn.rs  mod.rs  pmu.rs  rfnc.rs  srst.rs
crates/axvm/src/arch/x86_64/: ept.rs  frame.rs  lapic.rs  mod.rs  msr.rs  regs.rs
crates/axvm/src/arch/x86_64/vmx/: ept.rs  mod.rs  structs.rs  vcpu.rs  vcpu2.rs  vmcs.rs
crates/axvm/src/mm/: mod.rs  npt.rs
doc/: 2VmTimer.md  GuestVMs.md  README.md  SMP.md
guest/dtb/: nimbos-aarch64.dtb  nimbos-aarch64.dts
scripts/make/: build.mk  cargo.mk  qemu.mk  utils.mk
src/: hal.rs
src/vmm/: images.rs
tool/: dev_env.py
