[workspace]
resolver = "2"

members = ["arceos-vmm"]

[profile.release]
lto = true

[workspace.dependencies]
# axstd = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm" }
# axconfig = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm" }
axstd = { path = "../arceos-vm-dev" }
axconfig = { path = "../arceos-vm-dev" }

axvm = { git = "https://github.com/arceos-hypervisor/axvm.git" }
axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu.git" }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }