[workspace]
resolver = "2"

members = ["arceos-vmm"]
exclude = ["crates"]

[profile.release]
lto = true

[workspace.dependencies]
axstd = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm" }
axconfig = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm" }

axvm = { git = "https://github.com/arceos-hypervisor/axvm.git" }
axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu.git" }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }