[package]
name = "arceos-vmm"
version = "0.1.0"
edition = "2021"
authors = ["Keyang Hu <976929993@qq.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fs = ["axstd/fs"]

[dependencies]
log = "=0.4.21"
bitflags = "2.2"
spin = "0.9"

# System dependent modules provided by ArceOS.
axstd = { workspace = true, features = [
    "alloc",
    "paging",
    # "fs",
    "irq", # It has to be disabed in riscv64. Todo: fix it.
    "hv",
    "multitask",
    # "sched_rr"
] }

# System dependent modules provided by ArceOS-Hypervisor.
axvm = { workspace = true }
axvcpu = { workspace = true }
axaddrspace = { workspace = true }

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
crate_interface = "0.1"
axerrno = "0.1.0"
memory_addr = "0.3"
page_table_entry = { version = "0.4.1", features = ["arm-el2"] }
page_table_multiarch = "0.4.1"
percpu = { version = "0.1.4", features = ["arm-el2"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
raw-cpuid = "11.0"

[target.'cfg(target_arch = "riscv64")'.dependencies]
fdt = { version = "0.1.5" }
arrayvec = { version = "0.7.2", default-features = false }

[target.'cfg(target_arch = "aarch64")'.dependencies]
fdt = { version = "0.1.5" }
arrayvec = { version = "0.7.2", default-features = false }

[build-dependencies]
toml = { git = "https://github.com/arceos-hypervisor/toml.git", branch = "no_std" }
