[package]
name = "arceos-vmm"
version = "0.1.0"
edition = "2021"
authors = ["Keyang Hu <976929993@qq.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fs = ["axstd/fs"]

[dependencies]
log = "=0.4.21"
bitflags = "2.2"
spin = "0.9"

# System dependent modules provided by ArceOS.
axstd = { workspace = true, features = [
    "alloc",
    "paging",
    # "fs",
    "irq", # It has to be disabed in riscv64. Todo: fix it.
    "hv",
    "multitask",
    # "sched_rr"
] }

# System dependent modules provided by ArceOS-Hypervisor.
axvm = { workspace = true }
axvcpu = { workspace = true }
axaddrspace = { workspace = true }

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
crate_interface = "0.1"
axerrno = "0.1.0"
memory_addr = "0.3"
page_table_entry = { version = "0.4.1", features = ["arm-el2"] }
page_table_multiarch = "0.4.1"
percpu = { version = "0.1.4", features = ["arm-el2"] }

[build-dependencies]
toml = { git = "https://github.com/arceos-hypervisor/toml.git", branch = "no_std" }
