[package]
name = "axaddrspace"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
cfg-if = "1.0"
lazyinit = "0.2"
bitflags = "2.2"
bit_field = "0.10"
numeric-enum-macro = "0.2"

# Operating system independent modules provided by ArceOS.
axerrno = "0.1.0"
memory_addr = "0.2.0"
memory_set = "0.1.0"
page_table_multiarch = "0.1.2"
page_table_entry = "0.1.2"

# Operating system dependent modules provided by ArceOS.
axhal = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm_rebase", features = ["paging"] }
axalloc = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm_rebase" }
axconfig = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm_rebase" }
