[package]
name = "axvcpu"
authors = [ "aarkegz <aarkegz@gmail.com>" ]
version = "0.1.0"
edition = "2021"

[dependencies]
# axerrno = { git = "https://github.com/arceos-org/arceos.git", rev = "7defbff" }
# memory_addr = { git = "https://github.com/arceos-org/arceos.git", rev = "7defbff" }
# percpu = { git = "https://github.com/arceos-org/arceos.git", rev = "7defbff" }
axerrno = { path = "../../arceos/crates/axerrno" }
memory_addr = { path = "../../arceos/crates/memory_addr" }
percpu = { path = "../../arceos/crates/percpu" }
