[package]
name = "axvm"
version = "0.1.0"
edition = "2021"

[features]
default = ["vmx"]
vmx = []

[dependencies]
log = "=0.4.19"
cfg-if = "1.0"
bitflags = "2.2"
bit_field = "0.10"
numeric-enum-macro = "0.2"

axvcpu = { git = "https://github.com/915604903T/axvcpu.git", branch = "main" }

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
# axerrno = { path = "../../arceos/crates/axerrno" }
# spinlock = { path = "../../arceos/crates/spinlock" }
# memory_addr = { path = "../../arceos/crates/memory_addr" }
# page_table = { path = "../../arceos/crates/page_table" }
# page_table_entry = { path = "../../arceos/crates/page_table_entry" }
# percpu = { path = "../../arceos/crates/percpu" }
axerrno = { git = "https://github.com/915604903T/arceos.git", rev = "e89a758" }
spinlock = { git = "https://github.com/915604903T/arceos.git", rev = "e89a758" }
memory_addr = { git = "https://github.com/915604903T/arceos.git", rev = "e89a758" }
page_table = { git = "https://github.com/915604903T/arceos.git", rev = "e89a758" }
page_table_entry = { git = "https://github.com/915604903T/arceos.git", rev = "e89a758" }
percpu = { git = "https://github.com/915604903T/arceos.git", rev = "e89a758" }

# Operating system dependent modules provided by ArceOS, these modules could be imported by remote url.

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
raw-cpuid = "11.0"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv-decode = { git = "https://github.com/KuangjuX/riscv-decode.git" }
sbi-spec = { version = "0.0.6", features = ["legacy"] }
sbi-rt = { version = "0.0.2", features = ["integer-impls", "legacy"] }
tock-registers = "0.8.1"
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
axhal = { git = "https://github.com/915604903T/arceos.git", rev = "e89a758" }
cortex-a = "8.1.1"
aarch64-cpu = "9.3"
smccc = "0.1.1"
tock-registers = "0.8"
spin = "0.9"
