[package]
name = "axvm"
version = "0.1.0"
edition = "2021"

[features]
default = ["vmx"]
vmx = []

[dependencies]
log = "=0.4.19"
cfg-if = "1.0"
bitflags = "2.2"
bit_field = "0.10"
numeric-enum-macro = "0.2"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
toml = { git = "https://github.com/arceos-hypervisor/toml.git", branch = "no_std" }

axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu.git" }

# System independent crates provided by ArceOS.
axerrno = "0.1.0"
# kspin = "0.1.0"
memory_addr = "0.2.0"
page_table_multiarch = "0.1.2"
page_table_entry = "0.1.2"
# Todo: replace it when percpu-hv is published to crates.io
percpu = { git = "https://github.com/arceos-hypervisor/percpu-hv.git" }

# axmm = { git = "https://github.com/arceos-org/arceos.git", rev = "48805c4" }
axmm = { path = "../../../../arceos/modules/axmm" }
# Operating system dependent modules provided by ArceOS, these modules could be imported by remote url.

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
raw-cpuid = "11.0"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv-decode = { git = "https://github.com/KuangjuX/riscv-decode.git" }
sbi-spec = { version = "0.0.6", features = ["legacy"] }
sbi-rt = { version = "0.0.2", features = ["integer-impls", "legacy"] }
tock-registers = "0.8.1"
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
axhal = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm_rebase" }
cortex-a = "8.1.1"
aarch64-cpu = "9.3"
smccc = "0.1.1"
tock-registers = "0.8"
spin = "0.9"

# [patch.'https://github.com/arceos-org/arceos.git']
# axhal = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm_rebase" }
