[package]
name = "axvm"
version = "0.1.0"
edition = "2021"

[features]
default = ["vmx"]
vmx = []

[dependencies]
log = "=0.4.19"
cfg-if = "1.0"
bitflags = "2.2"
bit_field = "0.10"
numeric-enum-macro = "0.2"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
toml = { git = "https://github.com/arceos-hypervisor/toml.git", branch = "no_std" }
spin = "0.9"

# System independent crates provided by ArceOS.
axerrno = "0.1.0"
# kspin = "0.1.0"
memory_addr = "0.2.0"
page_table_entry = { version = "0.3.3", features = ["arm-el2"] }
page_table_multiarch = "0.3.3"
percpu = { version = "0.1.4", features = ["arm-el2"] }

# System dependent modules provided by ArceOS-Hypervisor.
axvcpu = { workspace = true }
axaddrspace = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
raw-cpuid = "11.0"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv-decode = { git = "https://github.com/KuangjuX/riscv-decode.git" }
sbi-spec = { version = "0.0.6", features = ["legacy"] }
sbi-rt = { version = "0.0.2", features = ["integer-impls", "legacy"] }
tock-registers = "0.8.1"
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
axhal = { workspace = true, features = ["hv"] }
cortex-a = "8.1.1"
aarch64-cpu = "9.3"
smccc = "0.1.1"
tock-registers = "0.8"
